# codespaces-teaching-template-py

./: Makefile
calc/: pyproject.toml
calc/calc/: __main__.py  commands.py
