[tool.poetry]
name = "calc"
version = "0.1.1"
description = "A simple calculator CLI tool"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calc = "calc.__main__:cli"


